[package]
name = "compiletime-sort-derive"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.8", features = ["full"] }
quote = "1.0.2"
eval = "0.4.3"
